--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native": "~0.63.4",
     "react-native-feather": "^1.0.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-snap-carousel": "^3.9.1",
